--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
+  "semi": true,
+  "tabWidth": 2,
   "endOfLine": "crlf"
 }
